changes the style of nav-search-button

--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -122,7 +122,7 @@ resources.Concat "/css/style.css" | minify | fingerprint "sha512"}}
   }
 
   .nav-search-button {
-    background-color: #0e3252;
+    background-color: #0e3252 !important;
   }
 
   .nav-search-button:hover,
