--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -117,12 +117,23 @@ resources.Concat "/css/style.css" | minify | fingerprint "sha512"}}
     width: 12em;
   }
 
+  .nav-search-input {
+    border-radius: 20px !important;
+    border-top-right-radius: 0px !important;
+    border-bottom-right-radius: 0px !important;
+  }
+
   .nav-search-input:focus {
     border-color: #0e3252;
   }
 
   .nav-search-button {
     background-color: #0e3252 !important;
+    border-radius: 20px !important;
+    border-top-left-radius: 0px !important;
+    border-bottom-left-radius: 0px !important;
+    padding-right: 12px;
+    margin-left: -8px;
   }
 
   .nav-search-button:hover,
