--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -206,8 +206,6 @@ resources.Concat "/css/style.css" | minify | fingerprint "sha512"}}
     text-decoration: none;
     font-weight: 800;
     letter-spacing: 0.1em;
-    /* border-bottom: #aeb8c0 2px dotted; */
-    /* border-width: thin; */
     word-spacing: 0.2em;
   }
 
@@ -396,6 +394,11 @@ resources.Concat "/css/style.css" | minify | fingerprint "sha512"}}
 
   body.dark-theme .newsletter p {
     color: white;
+  }
+
+  body.dark-theme input {
+    background-color: var(--extra-dark-background) !important;
+    color: white !important;
   }
 
   /*END:  Dark Theme */
