fix: search placeholder

--- a/layouts/partials/search-form.html
+++ b/layouts/partials/search-form.html
@@ -9,7 +9,7 @@
       type="text"
       id="search-input"
       name="query"
-      placeholder="search"
+      placeholder="Search"
       class="form-control rounded nav-search-input"
       oninput="enableButton()"
     />
