--- a/layouts/partials/subscribe.html
+++ b/layouts/partials/subscribe.html
@@ -26,7 +26,7 @@
           />
         </div>
         <div class="col-lg-2 col-md-2 mt-xl-0 mt-lg-0 mt-md-0 mt-2">
-          <input class="btn btn-primary" type="submit" value="Subscribe" />
+          <input class="btn big-btn" type="submit" value="Subscribe" />
         </div>
       </div>
     </div>
