feat: customize styles

--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -71,6 +71,13 @@ resources.Concat "/css/style.css" | minify | fingerprint "sha512"}}
     color: #fff;
     font-family: "Nunito Sans", sans-serif;
     font-weight: 700;
+    padding-top: 9px;
+    padding-bottom: 9px;
+  }
+
+  input {
+    border-radius: 20px !important;
+    padding-left: 20px !important;
   }
 
   .big-btn:hover {
@@ -103,6 +110,7 @@ resources.Concat "/css/style.css" | minify | fingerprint "sha512"}}
   .navbar-brand {
     width: 100%;
   }
+
   .nav-link {
     color: #0e3252;
   }
