--- a/layouts/partials/subscribe.html
+++ b/layouts/partials/subscribe.html
@@ -25,7 +25,7 @@
             type="email"
           />
         </div>
-        <div class="col-lg-2 col-md-2 mt-xl-0 mt-lg-0 mt-md-0 mt-2">
+        <div class="col-lg-2 col-md-2 mt-xl-0 mt-lg-0 mt-md-0">
           <input class="btn big-btn" type="submit" value="Subscribe" />
         </div>
       </div>
