feat: sync styles with main site

--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -71,6 +71,7 @@ resources.Concat "/css/style.css" | minify | fingerprint "sha512"}}
     color: #fff;
     font-family: "Nunito Sans", sans-serif;
     font-weight: 700;
+    padding: 16px;
     padding-top: 9px;
     padding-bottom: 9px;
   }
