fix: broken url for let's talk button

--- a/layouts/partials/lets-talk.html
+++ b/layouts/partials/lets-talk.html
@@ -2,7 +2,7 @@
   <div class="d-flex justify-content-center align-items-center text-center">
     <div>LET’S BUILD WELL CRAFTED SOFTWARE TOGETHER</div>
     <div>
-      <button class="btn btn-primary">LETS TALK</button>
+      <a class="btn btn-primary" href="{{.Site.BaseURL}}contact-us">LET'S TALK</a>
     </div>
   </div>
 </div>
@@ -23,7 +23,7 @@
     color: #ffffff;
   }
 
-  .lets-talk > div > div {
+  .lets-talk>div>div {
     margin-right: 40px;
   }
 
@@ -46,12 +46,12 @@
       font-size: 28px;
     }
 
-    .lets-talk > div {
+    .lets-talk>div {
       flex-direction: column;
       gap: 24px;
     }
 
-    .lets-talk > div > div {
+    .lets-talk>div>div {
       margin: 0;
     }
   }
