--- a/layouts/partials/accessibility-case-study.html
+++ b/layouts/partials/accessibility-case-study.html
@@ -9,12 +9,12 @@
 
       <div class="stats-container mt-5">
         <div class="stats">
-          <p>52+</p>
-          <p>Countries with product presence</p>
+          <p>1000+</p>
+          <p>Accessbility issues fixed</p>
         </div>
         <div class="stats">
-          <p>22+</p>
-          <p>Languages supported</p>
+          <p>31</p>
+          <p>End-to-end tests</p>
         </div>
         <div class="stats">
           <p>15k+</p>
