Updated outcomes section

--- a/layouts/partials/accessibility-case-study.html
+++ b/layouts/partials/accessibility-case-study.html
@@ -9,24 +9,16 @@
 
       <div class="stats-container mt-5">
         <div class="stats">
+          <p>AA</p>
+          <p>WCAG 2.1 Standard achieved</p>
+        </div>
+        <div class="stats">
           <p>1000+</p>
           <p>Accessbility issues fixed</p>
         </div>
         <div class="stats">
           <p>31</p>
           <p>End-to-end tests</p>
-        </div>
-        <div class="stats">
-          <p>15k+</p>
-          <p>Global users added</p>
-        </div>
-        <div class="stats">
-          <p>7</p>
-          <p>days to add a new language</p>
-        </div>
-        <div class="stats">
-          <p>RTL</p>
-          <p>Language support</p>
         </div>
       </div>
     </div>
@@ -357,6 +349,6 @@
 
 <style>
   .bg-shcolor {
-    background-color: #319f96;
+    background-color: #E9EAE6;
   }
 </style>
