--- a/layouts/partials/accessibility-case-study.html
+++ b/layouts/partials/accessibility-case-study.html
@@ -14,7 +14,7 @@
         </div>
         <div class="stats">
           <p>1000+</p>
-          <p>Accessbility issues fixed</p>
+          <p>Accessibility issues fixed</p>
         </div>
         <div class="stats">
           <p>31</p>
@@ -44,38 +44,15 @@
       </div>
 
       <p class="paragraph-body">
-        Our client is a leading, comprehensive global mental health solution
-        provider that advocates for better mental healthcare benefits for
-        everyone. They achieve this by delivering personalized solutions that
-        fit the individual while providing the proper clinical guidance and
-        emotional support.
-      </p>
-      <p class="paragraph-body">
-        Our client started their journey in 2016 and received series C funding,
-        resulting in a valuation of $2 billion in 2021. They now offer
-        top-quality mental healthcare solutions worldwide.
+        Our client is a US-based healthcare solution company that breaks down barriers to mental well-being. They offer a blend of tech-powered tools, personalized coaching, and even therapy, all seamlessly integrated and tailored to individual needs. This innovative approach empowers people to take charge of their mental health, making it accessible and convenient for everyone.
       </p>
 
       <h2 class="section-heading mt-5">WHAT WE DID</h2>
       <p class="paragraph-body">
-        Our client’s reach was limited to English speakers in the US for the
-        first few years. As part of their expansion strategy, they now needed to
-        add native language support and take their solution global.
+        As our client expanded, reaching new and diverse clients became crucial. However, their applications weren't accessible to many potential users, including those with disabilities, creating ethical and legal concerns. This limited market reach and hindered inclusivity. 
       </p>
-      <p class="paragraph-body-list">
-        Expanding the product presented its own set of challenges that included
-        the following:
-      </p>
-      <ul class="item-list">
-        <li>Scalability of the existing design</li>
-        <li>Support for new countries</li>
-        <li>Support for new languages</li>
-      </ul>
       <p class="paragraph-body">
-        A keen study of the existing product and our client’s requirements, a
-        careful selection of suitable solutions, and close collaboration with
-        the client helped us achieve the goal of delivering a highly scalable
-        solution in a short time. Some of our key wins include:
+        
       </p>
       <div class="what-we-did-container">
         <div class="item">
