--- a/layouts/partials/accessibility-case-study.html
+++ b/layouts/partials/accessibility-case-study.html
@@ -2,7 +2,7 @@
   <div class="template-container">
     <div class="text-container">
       <h1 class="title text-center">{{ .Title }}</h1>
-      <p class="summary text-center">{{ .Description }}</p>
+      <!-- <p class="summary text-center">{{ .Description }}</p> -->
       <p></p>
 
       <h2 class="section-heading text-center">OUTCOMES</h2>
@@ -118,7 +118,7 @@
         <a href="{{.Page.Permalink}}#highlight_1">
           <div class="item">
             <p class="index">1.</p>
-            <p class="label">Creating the approach</p>
+            <p class="label">Initiating an accessibility audit</p>
             <img
               style="width: 28px; height: auto; align-self: start"
               src="{{ .Params.right_arrow |relURL }}"
@@ -140,7 +140,7 @@
         <a href="{{.Page.Permalink}}#highlight_3">
           <div class="item">
             <p class="index">3.</p>
-            <p class="label">Next step, the backend</p>
+            <p class="label">Making the app screen-reader friendly</p>
             <img
               style="width: 28px; height: auto; align-self: start"
               src="{{ .Params.right_arrow |relURL }}"
@@ -151,7 +151,7 @@
         <a href="{{.Page.Permalink}}#highlight_4">
           <div class="item">
             <p class="index">4.</p>
-            <p class="label">Solution for emails</p>
+            <p class="label">RTL language support</p>
             <img
               style="width: 28px; height: auto; align-self: start"
               src="{{ .Params.right_arrow |relURL }}"
@@ -162,7 +162,17 @@
         <a href="{{.Page.Permalink}}#highlight_5">
           <div class="item">
             <p class="index">5.</p>
-            <p class="label">Support for RTL languages</p>
+            <p class="label">Adding keyboard navigation</p>
+            <img
+              style="width: 28px; height: auto; align-self: start"
+              src="{{ .Params.right_arrow |relURL }}"
+            />
+          </div>
+        </a>
+        <a href="{{.Page.Permalink}}#highlight_6">
+          <div class="item">
+            <p class="index">6.</p>
+            <p class="label">Accessibile PDFs</p>
             <img
               style="width: 28px; height: auto; align-self: start"
               src="{{ .Params.right_arrow |relURL }}"
@@ -172,7 +182,7 @@
       </div>
 
       <h3 class="project-highlights-subheading mt-5" id="highlight_1">
-        1. Creating the approach
+        1. Initiating an accessibility audit
       </h3>
 
       <p class="paragraph-body mt-3">
@@ -180,144 +190,53 @@
         application. Some are UI-embedded, while some come from the backend and
         the database.
       </p>
-
-      <p class="paragraph-body">
-        Since language is a crucial aspect affecting user experience, we needed
-        a proper strategy to retrieve content in the target language based on
-        user location.
-      </p>
-
-      <p class="paragraph-body">
-        Our approach was to extract the strings of content, save their
-        translations, and serve this translated version to the end user. To
-        achieve this, we set up several steps in the frontend, backend, and
-        database. We also made our solution user-friendly by translating emails
-        and supporting right-to-left languages to enhance user experience.
-      </p>
     </div>
     <div class="text-container">
       <h3 class="project-highlights-subheading mt-4" id="highlight_2">
         2. Tackling the Frontend
       </h3>
-
       <p class="paragraph-body mt-3">
         Every software product typically communicates with its users through its
         UI. Our first challenge was translating the UI based on the user’s
         language preference.
       </p>
-      <p class="paragraph-body">
-        The first step in tackling the UI-embedded content was to move it from
-        code to simple text files. This helps simplify the process of
-        introducing new languages in the future. A new language can be added
-        simply by replicating the flat file in a different language.
-      </p>
-      <p class="paragraph-body">
-        We used JSON files to separate code from the language embedded in it.
-        Doing so ensures all content is available in one place, and a
-        translation service can easily translate this content.
-      </p>
-      <p class="paragraph-body">
-        In a global solution, there is a need for customized content based on
-        the user’s location. In addition to generalizing common and hard coded
-        content, helpline numbers are dynamically displayed based on user
-        location to ensure users get the correct information.
-      </p>
-      <p class="paragraph-body">
-        Lastly, we introduced Crowdin, a third-party translation provider, to
-        get translations for new languages. To extend this further, we
-        integrated Crowdin with GitHub PR workflow so that the automated
-        pipelines can handle the translations without a developer’s manual
-        intervention, saving time for the team.
-      </p>
     </div>
 
     <div class="text-container">
       <h3 class="project-highlights-subheading mt-4" id="highlight_3">
-        3. Next Step, the Backend 
+        3. Making the app screen-reader friendly 
       </h3>
-
       <p class="paragraph-body mt-3">
         Maintaining consistency is vital in development, so we took similar
         steps in the backend to those in the frontend, ensuring a seamless user
         experience without disruptions.
       </p>
-      <p class="paragraph-body">
-        We configured the application to deliver localized content based on the
-        user’s language preferences.
-      </p>
-      <p class="paragraph-body">
-        Initially, all content was retrieved directly from the database and
-        passed to the frontend in English. As new languages were introduced, we
-        made the necessary adjustments to the application to serve the
-        translated data content instead.
-      </p>
-      <p class="paragraph-body">
-        For translations, we opted for a hybrid of database and YAML files for
-        serving translated content, using Crowdin as our choice tool for
-        providing translations.
-      </p>
     </div>
     <div class="text-container">
       <h3 class="project-highlights-subheading mt-4" id="highlight_4">
-        4. Solution for Emails 
+        4. RTL language support 
       </h3>
-
       <p class="paragraph-body mt-3">
         Next, we also wanted customers to receive emails in their target
         language.
       </p>
-      <p class="paragraph-body">
-        In the case of emails, we integrated a third-party mail service
-        provider, Iterable. Iterable offers smooth email translations thanks to
-        its locale-based templates that automatically translate content based on
-        the user's preference. For existing emails, we migrated them to use
-        these easy-to-edit templates.
-      </p>
-      <p class="paragraph-body">
-        In the future, our client's marketing team can effortlessly launch
-        events and email campaigns with these editable templates.
-      </p>
-      <p class="paragraph-body">
-        For our client, this meant a better overall experience. Mails are now
-        translated and can be modified without a dependency on the developer,
-        removing a significant bottleneck for the client's marketing team.
-      </p>
     </div>
     <div class="text-container">
       <h3 class="project-highlights-subheading mt-4" id="highlight_5">
-        5. Support for RTL Languages
+        5. Adding keyboard navigation
       </h3>
-
       <p class="paragraph-body mt-3">
         While the application empowered users to access content in their
         preferred language, supporting RTL language was the natural next step.
       </p>
-      <p class="paragraph-body">
-        For right-to-left languages such as Arabic, the UI usually appears
-        mirrored. Based on this factor, we identified the elements that would
-        appear mirrored to ensure an intuitive user experience.
-      </p>
-      <p class="paragraph-body">
-        Bidirectionality is an integral part of the UI to support RTL content.
-        An instance of this would be the direction of the arrow that indicates
-        the back button in RTL languages. To accommodate this, we added
-        bidirectional text and icons configured to mirror depending on the
-        language needs.
-      </p>
-      <p class="paragraph-body">
-        At the same time, content types such as images appear the same
-        irrespective of language. For this content, we added smart exceptions as
-        they don’t adhere to RTL styling rules. The same applies to specific
-        icons that don’t hold directional meaning.
-      </p>
-      <p class="paragraph-body">
-        Overall, the steps we took, such as translating English to RTL language
-        and UI mirroring, transformed our solution into a robust tool that met
-        the diverse needs of each end-user.
-      </p>
-      <p class="paragraph-body">
-        *All the metrics in this case study are accurate as of the time of
-        publishing.
+    </div>
+    <div class="text-container">
+      <h3 class="project-highlights-subheading mt-4" id="highlight_6">
+        6. Accessibile PDFs
+      </h3>
+      <p class="paragraph-body mt-3">
+        While the application empowered users to access content in their
+        preferred language, supporting RTL language was the natural next step.
       </p>
     </div>
   </div>
