Updated what we did section

--- a/layouts/partials/accessibility-case-study.html
+++ b/layouts/partials/accessibility-case-study.html
@@ -52,7 +52,7 @@
         As our client expanded, reaching new and diverse clients became crucial. However, their applications weren't accessible to many potential users, including those with disabilities, creating ethical and legal concerns. This limited market reach and hindered inclusivity. 
       </p>
       <p class="paragraph-body">
-        
+        We embraced accessibility as a strategic business driver. After a thorough audit, we tackled over 1,000 issues across the user experience, prioritizing the needs of diverse users:
       </p>
       <div class="what-we-did-container">
         <div class="item">
@@ -64,7 +64,7 @@
             />
           </div>
           <p class="label">
-            Three months to make the product globalization ready
+            <b>Visual Impairment:</b> Enhanced screen reader compatibility, implemented proper color contrast, and structured HTML elements for intuitive navigation. 
           </p>
         </div>
 
@@ -77,8 +77,7 @@
             />
           </div>
           <p class="label">
-            Following this, under seven days and minimal development effort to
-            introduce a new language
+            <b>Hearing Impairment:</b> Added video transcripts, image alt text, and summarized audio content. 
           </p>
         </div>
 
@@ -91,21 +90,7 @@
             />
           </div>
           <p class="label">
-            Launched in 52+ countries and 22+ languages in the following months
-          </p>
-        </div>
-
-        <div class="item">
-          <div class="rounded-circle bg-secondary">
-            <img
-              class="rounded-circle"
-              style="width: 62px; height: 62px; background: #d9d9d9 !important"
-              src="{{ .Params.what_we_did_icon_4 |relURL }}"
-            />
-          </div>
-          <p class="label">
-            Built trust and long-term association with the client to execute
-            their vision and strategic direction
+            <b>Physical Disabilities:</b> Enabled keyboard navigation and made interfaces interactive with various input methods. 
           </p>
         </div>
       </div>
