Updated what we did section

--- a/layouts/partials/accessibility-case-study.html
+++ b/layouts/partials/accessibility-case-study.html
@@ -93,6 +93,9 @@
             <b>Physical Disabilities:</b> Enabled keyboard navigation and made interfaces interactive with various input methods. 
           </p>
         </div>
+        <p class="paragraph-body">
+        Further enhancements included semantic HTML structure, right-to-left language support with text-to-speech, and fully keyboard-operable interfaces. Our efforts extended to ensuring generated PDFs complied with accessibility standards. 
+      </p>
       </div>
     </div>
 
