--- a/layouts/partials/accessibility-case-study.html
+++ b/layouts/partials/accessibility-case-study.html
@@ -102,7 +102,7 @@
   <h2 class="section-heading mt-5">A QUICK WORD ON ACCESSIBILITY</h2>
  <p class="label">ETHICAL IMPLICATIONS</p>
 <p class="paragraph-body">
-       Roughly 15% of the US population is [disabled](https://www.pewresearch.org/short-reads/2023/07/24/8-facts-about-americans-with-disabilities/#:~:text=Overall%2C%20there%20are%20about%2042.5,care%20or%20independent%20living%20difficulties.), and approximately 1 in 12 men are [colorblind](https://www.colourblindawareness.org/colour-blindness/#:~:text=Colour%20(color)%20blindness%20(colour,and%201%20in%20200%20women.). Stats like these frequently get ignored in the initial phase of a digital product because founders work against time and underestimate their possible success. But as soon as they have more than a few hundred users, you can confidently say that at least a few of them need a more accessible product. 
+       Roughly 15% of the US population is <a href="https://www.pewresearch.org/short-reads/2023/07/24/8-facts-about-americans-with-disabilities/#:~:text=Overall%2C%20there%20are%20about%2042.5,care%20or%20independent%20living%20difficulties.">disabled</a>, and approximately 1 in 12 men are <a href="https://www.colourblindawareness.org/colour-blindness/#:~:text=Colour%20(color)%20blindness%20(colour,and%201%20in%20200%20women.">colorblind</a>. Stats like these frequently get ignored in the initial phase of a digital product because founders work against time and underestimate their possible success. But as soon as they have more than a few hundred users, you can confidently say that at least a few of them need a more accessible product. 
       </p>
   <p class="label">LEGAL IMPLICATIONS</p>
 <p class="paragraph-body">
@@ -110,13 +110,13 @@
       </p>
   <ol>
     <li>
-      [Americans with Disabilities Act (ADA)](https://www.ada.gov/)
+      <a href="https://www.ada.gov/">Americans with Disabilities Act (ADA)</a>
     </li>
     <p class="paragraph-body">
       This US federal law came to pass in 1990 and protects individuals with disabilities from discrimination. It mandates equal access to employment, public accommodations, transportation, and services. Violations of the ADA can result in significant penalties and fines, with penalties ranging from $55,000 for a first violation up to $150,000 for subsequent violations, depending on the nature and severity of the offense. 
     </p>
     <li>
-      [Web Content Accessibility Guidelines (WCAG)](https://www.w3.org/WAI/standards-guidelines/wcag/)
+      <a href="https://www.w3.org/WAI/standards-guidelines/wcag/">Web Content Accessibility Guidelines (WCAG)</a>
     </li>
     <p class="paragraph-body">
     WCAG, established by the World Wide Web Consortium (W3C), offers recommendations for crafting web content that is inclusive to individuals with disabilities. These standards guarantee that websites and web applications are designed to be perceivable, operable, understandable, and robust, thus broadening access to online information and services. Additionally, penalties and fines for non-compliance can vary depending on the specific laws and regulations in a given jurisdiction.
