--- a/layouts/partials/accessibility-case-study.html
+++ b/layouts/partials/accessibility-case-study.html
@@ -2,7 +2,7 @@
   <div class="template-container">
     <div class="text-container">
       <h1 class="title text-center">{{ .Title }}</h1>
-      <!-- <p class="summary text-center">{{ .Description }}</p> -->
+      <p class="summary text-center">{{ .Description }}</p>
       <p></p>
 
       <h2 class="section-heading text-center">OUTCOMES</h2>
