--- a/layouts/partials/accessibility-case-study.html
+++ b/layouts/partials/accessibility-case-study.html
@@ -100,7 +100,7 @@
     </div>
 <div class="text-container">
   <h2 class="section-heading mt-5">A QUICK WORD ON ACCESSIBILITY</h2>
- <p class="label">ETHICAL IMPLICATIONS</p>
+ <p class="project-highlights-grid item label">ETHICAL IMPLICATIONS</p>
 <p class="paragraph-body">
        Roughly 15% of the US population is <a href="https://www.pewresearch.org/short-reads/2023/07/24/8-facts-about-americans-with-disabilities/#:~:text=Overall%2C%20there%20are%20about%2042.5,care%20or%20independent%20living%20difficulties.">disabled</a>, and approximately 1 in 12 men are <a href="https://www.colourblindawareness.org/colour-blindness/#:~:text=Colour%20(color)%20blindness%20(colour,and%201%20in%20200%20women.">colorblind</a>. Stats like these frequently get ignored in the initial phase of a digital product because founders work against time and underestimate their possible success. But as soon as they have more than a few hundred users, you can confidently say that at least a few of them need a more accessible product. 
       </p>
