Updating project highlights

--- a/layouts/partials/accessibility-case-study.html
+++ b/layouts/partials/accessibility-case-study.html
@@ -202,9 +202,10 @@
       </h3>
 
       <p class="paragraph-body mt-3">
-        When building software products, content is often distributed across the
-        application. Some are UI-embedded, while some come from the backend and
-        the database.
+        To ensure the application is accessible to everyone, we used a tool called <a href="https://www.deque.com/axe/">Deque Axe DevTools</a> to check it thoroughly. This tool helped us find areas where application accessibility can be improved. Next step involved creating a list of tasks based on the findings from the check.
+      </p>
+      <p class="paragraph-body mt-3">
+        After that, we went through each task one by one, focusing on the ones that would have the biggest impact. Doing this ensures that the application follows accessibility guidelines, making it easier for users to use and enjoy.
       </p>
     </div>
     <div class="text-container">
