--- a/layouts/partials/accessibility-case-study.html
+++ b/layouts/partials/accessibility-case-study.html
@@ -145,18 +145,17 @@
         <a href="{{.Page.Permalink}}#highlight_2">
           <div class="item">
             <p class="index">2.</p>
-            <p class="label">Tackling the frontend</p>
+            <p class="label">Making the app screen-reader friendly</p>
             <img
               style="width: 28px; height: auto; align-self: start"
               src="{{ .Params.right_arrow |relURL }}"
             />
           </div>
         </a>
-
         <a href="{{.Page.Permalink}}#highlight_3">
           <div class="item">
             <p class="index">3.</p>
-            <p class="label">Making the app screen-reader friendly</p>
+            <p class="label">Text-to-Speech Support</p>
             <img
               style="width: 28px; height: auto; align-self: start"
               src="{{ .Params.right_arrow |relURL }}"
@@ -167,7 +166,7 @@
         <a href="{{.Page.Permalink}}#highlight_4">
           <div class="item">
             <p class="index">4.</p>
-            <p class="label">RTL language support</p>
+            <p class="label">Right-to-Left (RTL) Languages</p>
             <img
               style="width: 28px; height: auto; align-self: start"
               src="{{ .Params.right_arrow |relURL }}"
@@ -178,7 +177,7 @@
         <a href="{{.Page.Permalink}}#highlight_5">
           <div class="item">
             <p class="index">5.</p>
-            <p class="label">Adding keyboard navigation</p>
+            <p class="label">Keyboard Navigation Enhancement</p>
             <img
               style="width: 28px; height: auto; align-self: start"
               src="{{ .Params.right_arrow |relURL }}"
@@ -188,7 +187,7 @@
         <a href="{{.Page.Permalink}}#highlight_6">
           <div class="item">
             <p class="index">6.</p>
-            <p class="label">Accessibile PDFs</p>
+            <p class="label">Accessible PDFs</p>
             <img
               style="width: 28px; height: auto; align-self: start"
               src="{{ .Params.right_arrow |relURL }}"
@@ -210,50 +209,51 @@
     </div>
     <div class="text-container">
       <h3 class="project-highlights-subheading mt-4" id="highlight_2">
-        2. Tackling the Frontend
+        2. Making the app screen-reader friendly 
       </h3>
       <p class="paragraph-body mt-3">
-        Every software product typically communicates with its users through its
-        UI. Our first challenge was translating the UI based on the user’s
-        language preference.
-      </p>
-    </div>
+       Screen readers rely on descriptive labels to navigate through content. We started with adding appropriate labels, also ensuring all inputs were fully interactive with different input methods. 
 
+        We then addressed contrast and readability issues which enhances the usability of the application for users with conditions like color blindness. 
+
+        Utilizing semantic HTML tags correctly, such as <a> for links and <button> for buttons, ensures compatibility with assistive technologies and provides clearer navigation cues for users. We also added 'role' attributes to elements to help clarify their purpose and behavior for assistive technologies. Assigning semantic headings with appropriate 'role' and 'aria-level' attributes aids in document structure comprehension for users of screen readers which is what we did by assiging role=heading and aria-level attirbutes for heading. 
+
+        Ensuring that all image and icon elements have alternate text or captions was also a priority. For users to comfortable access the app, we ensured all content was fully visible with upto 400% zoom levels and on mobile devices. 
+
+        We also added a 'position' attribute to dropdown elements that allows screen readers to announce the current selection's position within the dropdown list, for instance, Option 1 out of 5.
+        
+        </p>
+    </div>
     <div class="text-container">
       <h3 class="project-highlights-subheading mt-4" id="highlight_3">
-        3. Making the app screen-reader friendly 
+        3. Text-to-Speech Support 
       </h3>
       <p class="paragraph-body mt-3">
-        Maintaining consistency is vital in development, so we took similar
-        steps in the backend to those in the frontend, ensuring a seamless user
-        experience without disruptions.
+        We integrated text-to-speech capabilities by revamping the frontend with semantically correct HTML markup, such as using <h1> for main headings, <h2> for subheadings, and so forth. This restructuring allows text-to-speech users to navigate our app more naturally, improving their overall browsing experience.
       </p>
     </div>
     <div class="text-container">
       <h3 class="project-highlights-subheading mt-4" id="highlight_4">
-        4. RTL language support 
+        4. Right-to-Left (RTL) Languages
       </h3>
       <p class="paragraph-body mt-3">
-        Next, we also wanted customers to receive emails in their target
-        language.
+        To accommodate languages such as Arabic and Hebrew, which are read from right to left, we updated the app to support RTL languages making sure users across different linguistic backgrounds can access the content seamlessly, regardless of reading direction, thereby promoting inclusivity.
       </p>
     </div>
     <div class="text-container">
       <h3 class="project-highlights-subheading mt-4" id="highlight_5">
-        5. Adding keyboard navigation
+        5. Keyboard Navigation Enhancement
       </h3>
       <p class="paragraph-body mt-3">
-        While the application empowered users to access content in their
-        preferred language, supporting RTL language was the natural next step.
+        To facilitate easy navigation and interaction for users who rely solely on keyboard input, particularly individuals with motor impairments, we made improvements to ensure full keyboard operability throughout the app. This involved adding appropriate focus targets and labels, ensuring a logical focus order. These enhancements significantly improve accessibility for users who navigate using keyboard commands rather than a mouse.
       </p>
     </div>
     <div class="text-container">
       <h3 class="project-highlights-subheading mt-4" id="highlight_6">
-        6. Accessibile PDFs
+        6. Accessible PDFs
       </h3>
       <p class="paragraph-body mt-3">
-        While the application empowered users to access content in their
-        preferred language, supporting RTL language was the natural next step.
+        Lastly, We updated all generated PDFs to adhere to WCAG and User Agent Accessibility Guidelines (UAAG) standards. This involved optimizing contrast ratios, enhancing keyboard navigation within PDF documents, and ensuring compatibility with text-to-speech readers. We utilized tools like the PDF Accessibility Checker (PAC) to verify compliance with these standards, ensuring that our PDFs are accessible to a wide range of users.
       </p>
     </div>
   </div>
