--- a/layouts/partials/accessibility-case-study.html
+++ b/layouts/partials/accessibility-case-study.html
@@ -216,7 +216,7 @@
 
         We then addressed contrast and readability issues which enhances the usability of the application for users with conditions like color blindness. 
 
-        Utilizing semantic HTML tags correctly, such as "<a>" for links and "<button>" for buttons, ensures compatibility with assistive technologies and provides clearer navigation cues for users. We also added 'role' attributes to elements to help clarify their purpose and behavior for assistive technologies. Assigning semantic headings with appropriate 'role' and 'aria-level' attributes aids in document structure comprehension for users of screen readers which is what we did by assiging role=heading and aria-level attirbutes for heading. 
+        Utilizing semantic HTML tags correctly, such as &lt;a&gt; for links and &lt;button&gt; for buttons, ensures compatibility with assistive technologies and provides clearer navigation cues for users. We also added 'role' attributes to elements to help clarify their purpose and behavior for assistive technologies. Assigning semantic headings with appropriate 'role' and 'aria-level' attributes aids in document structure comprehension for users of screen readers which is what we did by assiging role=heading and aria-level attirbutes for heading. 
 
         Ensuring that all image and icon elements have alternate text or captions was also a priority. For users to comfortable access the app, we ensured all content was fully visible with upto 400% zoom levels and on mobile devices. 
 
@@ -229,7 +229,7 @@
         3. Text-to-Speech Support 
       </h3>
       <p class="paragraph-body mt-3">
-        We integrated text-to-speech capabilities by revamping the frontend with semantically correct HTML markup, such as using "<h1>" for main headings, "<h2>" for subheadings, and so forth. This restructuring allows text-to-speech users to navigate our app more naturally, improving their overall browsing experience.
+        We integrated text-to-speech capabilities by revamping the frontend with semantically correct HTML markup, such as using &lt;h1&gt; for main headings, &lt;h2&gt; for subheadings, and so forth. This restructuring allows text-to-speech users to navigate our app more naturally, improving their overall browsing experience.
       </p>
     </div>
     <div class="text-container">
