--- a/layouts/partials/accessibility-case-study.html
+++ b/layouts/partials/accessibility-case-study.html
@@ -134,7 +134,7 @@
         <a href="{{.Page.Permalink}}#highlight_1">
           <div class="item">
             <p class="index">1.</p>
-            <p class="label">Initiating an accessibility audit</p>
+            <p class="label">Initiating an Accessibility Audit</p>
             <img
               style="width: 28px; height: auto; align-self: start"
               src="{{ .Params.right_arrow |relURL }}"
@@ -145,7 +145,7 @@
         <a href="{{.Page.Permalink}}#highlight_2">
           <div class="item">
             <p class="index">2.</p>
-            <p class="label">Making the app screen-reader friendly</p>
+            <p class="label">Making App Screen-Reader Friendly</p>
             <img
               style="width: 28px; height: auto; align-self: start"
               src="{{ .Params.right_arrow |relURL }}"
@@ -197,7 +197,7 @@
       </div>
 
       <h3 class="project-highlights-subheading mt-5" id="highlight_1">
-        1. Initiating an accessibility audit
+        1. Initiating an Accessibility Audit
       </h3>
 
       <p class="paragraph-body mt-3">
@@ -209,20 +209,23 @@
     </div>
     <div class="text-container">
       <h3 class="project-highlights-subheading mt-4" id="highlight_2">
-        2. Making the app screen-reader friendly 
+        2. Making App Screen-Reader Friendly 
       </h3>
       <p class="paragraph-body mt-3">
        Screen readers rely on descriptive labels to navigate through content. We started with adding appropriate labels, also ensuring all inputs were fully interactive with different input methods. 
-
-        We then addressed contrast and readability issues which enhances the usability of the application for users with conditions like color blindness. 
-
-        Utilizing semantic HTML tags correctly, such as &lt;a&gt; for links and &lt;button&gt; for buttons, ensures compatibility with assistive technologies and provides clearer navigation cues for users. We also added 'role' attributes to elements to help clarify their purpose and behavior for assistive technologies. Assigning semantic headings with appropriate 'role' and 'aria-level' attributes aids in document structure comprehension for users of screen readers which is what we did by assiging role=heading and aria-level attirbutes for heading. 
-
-        Ensuring that all image and icon elements have alternate text or captions was also a priority. For users to comfortable access the app, we ensured all content was fully visible with upto 400% zoom levels and on mobile devices. 
-
+      </p>
+      <p class="paragraph-body mt-3">
+        We then addressed contrast and readability issues which enhances the usability of the application for users with conditions like color blindness.
+      </p>
+      <p class="paragraph-body mt-3">
+        Utilizing semantic HTML tags correctly, such as &lt;a&gt; for links and &lt;button&gt; for buttons, ensures compatibility with assistive technologies and provides clearer navigation cues for users. We also added 'role' attributes to elements to help clarify their purpose and behavior for assistive technologies. Assigning semantic headings with appropriate 'role' and 'aria-level' attributes aids in document structure comprehension for users of screen readers which is what we did by assiging role=heading and aria-level attributes for heading.
+      </p>
+      <p class="paragraph-body mt-3">
+        Ensuring that all image and icon elements have alternate text or captions was also a priority. For users to comfortable access the app, we ensured all content was fully visible with upto 400% zoom levels and on mobile devices.
+      </p>
+      <p class="paragraph-body mt-3">
         We also added a 'position' attribute to dropdown elements that allows screen readers to announce the current selection's position within the dropdown list, for instance, Option 1 out of 5.
-        
-        </p>
+      </p>
     </div>
     <div class="text-container">
       <h3 class="project-highlights-subheading mt-4" id="highlight_3">
