--- a/layouts/partials/accessibility-case-study.html
+++ b/layouts/partials/accessibility-case-study.html
@@ -49,10 +49,10 @@
 
       <h2 class="section-heading mt-5">WHAT WE DID</h2>
       <p class="paragraph-body">
-        As our client expanded, reaching new and diverse clients became crucial. However, their applications weren't accessible to many potential users, including those with disabilities, creating ethical and legal concerns. This limited market reach and hindered inclusivity. 
+        As our client expanded, reaching new and diverse customers became crucial. However, the application wasn't accessible to many potential users, including those with disabilities, creating ethical and legal concerns. This limited market reach and hindered inclusivity. 
       </p>
       <p class="paragraph-body">
-        We embraced accessibility as a strategic business driver. After a thorough audit, we tackled over 1,000 issues across the user experience, prioritizing the needs of diverse users:
+        We embraced accessibility as a strategic business driver and after a thorough audit, we tackled over 1,000 issues across the user experience while prioritizing the needs of diverse users:
       </p>
       <div class="what-we-did-container">
         <div class="item">
@@ -64,7 +64,7 @@
             />
           </div>
           <p class="label">
-            <b>Visual Impairment:</b> Enhanced screen reader compatibility, implemented proper color contrast, and structured HTML elements for intuitive navigation. 
+            <b>Visual Impairment:</b> Enhanced screen reader compatibility and structured HTML elements for intuitive navigation. 
           </p>
         </div>
 
@@ -90,7 +90,20 @@
             />
           </div>
           <p class="label">
-            <b>Physical Disabilities:</b> Enabled keyboard navigation and made interfaces interactive with various input methods. 
+            <b>Physical Disabilities:</b> Enabled keyboard navigation ensuring interactivity with various input methods.
+          </p>
+        </div>
+
+        <div class="item">
+          <div class="rounded-circle bg-secondary">
+            <img
+              class="rounded-circle"
+              style="width: 62px; height: 62px; background: #d9d9d9 !important"
+              src="{{ .Params.what_we_did_icon_2 |relURL }}"
+            />
+          </div>
+          <p class="label">
+            Achieved WCAG 2.1 A & AA standards for conformance levels 
           </p>
         </div>
         <p class="paragraph-body">
